--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img  src="images/pic1-220-300.png" />
                 </a>
                 <p>wenn du diesen rechner kaust bekommst du zahnschmerzen! bei nebenwirkungen
-                    fressen sie die packungsbeilage und fragen sie ein arzt oder apoteker.</p>
+                    fressen sie die packungsbeilage und schlagen sie ein arzt oder apoteker.</p>
             </div>
             
             <div class="box">
